Fri Mar 11 14:11:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp:
          Fix for previous commit. Use ACE::is_inequal().

Fri Mar 11 14:04:14 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp:
        * orbsvcs/tests/EC_Custom_Marshal/ECM_Consumer.cpp:
          Use ACE::is_equal() to compare floating point values.

Thu Mar 10 13:08:17 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * tao/Stub.h:
        * tao/Stub.inl:
        * tao/Stub.cpp:
          Made the profile_lock now a regular member mutex

Thu Mar 10 11:41:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Stub.h:
          Doxygen changes

        * tao/Stub.cpp:
          Explicitly retrieve the client_strategy factory in the constructor in
          order to force a load of it at this point. Not doing it here leads
          to the situation in the ImR combined example that we want to load
          it later and than get a deadlock

Thu Mar 10 11:26:47 UTC 2011  Olli Savia  <ops@iki.fi>

        * tao/ZIOP/ZIOP.cpp:
          Use ACE::is_equal() to compare floating point values.

Thu Mar 10 10:54:34 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/be/be_interface.cpp:
        * examples/RTScheduling/DT_Creator.cpp:
          Added casts to types expected by printf format.

Wed Mar  9 14:55:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Server_Strategy_Factory.h:
        * tao/Server_Strategy_Factory.cpp:
          Made all methods except the destructor pure virtual, this is an
          abstract base class

Wed Mar  9 14:27:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Client_Strategy_Factory.h:
        * tao/Client_Strategy_Factory.cpp:
          Made all methods except the destructor pure virtual, this is an
          abstract base class
