@@ -980,7 +980,7 @@ visit_div (TAO_Binary_Constraint* boolean_div)
         case TAO_DOUBLE:
           right_isnt_zero =
             ACE::is_inequal (static_cast<CORBA::Double>
-	       (*dynamic_cast<TAO_Literal_Constraint*> (right)), 0.0);
+               (*dynamic_cast<TAO_Literal_Constraint*> (right)), 0.0);
           break;
         }
 
